kubernetes/main/apps/downloads/cross-seed/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cross-seed
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cross-seed
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # autobrr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: autobrr
      ports:
        - port: 2468
          protocol: TCP
  egress:
    # qBittorrent
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: qbittorrent
      ports:
        - port: 8080
          protocol: TCP
    # prowlarr
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: 9696
          protocol: TCP
    # kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    # Internet
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
